Cruft removal.